--- a/FMS IPR Python 1/01 Erste Schritte/01 Willkommen/task-info.yaml
+++ b/FMS IPR Python 1/01 Erste Schritte/01 Willkommen/task-info.yaml
@@ -2,7 +2,9 @@ type: output
 files:
 - name: tests/output.txt
   visible: false
-- name: main.py
-  visible: true
 - name: __init__.py
   visible: false
+- name: main.py
+  visible: true
+- name: output.png
+  visible: true
