--- a/FMS IPR Python 1/05 Schleifen/01 Loops/task-info.yaml
+++ b/FMS IPR Python 1/05 Schleifen/01 Loops/task-info.yaml
@@ -1,10 +1,8 @@
 type: edu
 files:
-- name: task.py
+- name: main.py
   visible: true
-- name: tests/test_task.py
-  visible: false
 - name: __init__.py
   visible: false
-- name: tests/__init__.py
+- name: tests/output.txt
   visible: false
